samples/zero/disassemble/service.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: helloworld-go
spec:
  release:
    revisions:
      - helloworld-go-svc
    rolloutPercent: 0
    configuration:
      template:
        metadata:
          name: helloworld-go-svc
        spec:
          containers:
          - env:
            - name: TARGET
              value: Go Sample v1
            image: gcr.io/knative-samples/helloworld-go
