samples/zero/disassemble/route.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"serving.knative.dev/v1alpha1","kind":"Service","metadata":{"annotations":{},"name":"helloworld-go","namespace":"default"},"spec":{"template":{"spec":{"containers":[{"env":[{"name":"TARGET","value":"Go Sample v1"}],"image":"gcr.io/knative-samples/helloworld-go"}]}}}}
    serving.knative.dev/creator: kubernetes-admin
    serving.knative.dev/lastModifier: kubernetes-admin
  finalizers:
  - routes.serving.knative.dev
  generation: 1
  labels:
    serving.knative.dev/service: helloworld-go
  name: helloworld-go
  namespace: ""
  ownerReferences:
  - apiVersion: serving.knative.dev/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Service
    name: helloworld-go
    uid: d2a05d9f-7d1d-11e9-b516-0800271129fd
  resourceVersion: ""
  selfLink: /apis/serving.knative.dev/v1alpha1/namespaces/default/routes/helloworld-go
  uid: ""
spec:
  traffic:
  - configurationName: helloworld-go
    latestRevision: true
    percent: 100
