samples/zero/disassemble/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: zero-cell--hello
    mesh.cellery.io/cell: zero-cell
    mesh.cellery.io/gateway: zero-cell--gateway
  name: zero-cell--mesh
spec:
  gateways:
  - mesh
  hosts:
  - zero-cell--hello-service-rev
  http:
  - appendHeaders:
      knative-serving-namespace: default
      knative-serving-revision: zero-cell--hello-service-rev
    match:
    - authority:
        regex: ^zero-cell--hello-service-rev(?::\d{1,5})?$
      sourceLabels:
        mesh.cellery.io/cell: zero-cell
    - authority:
        regex: ^zero-cell--hello-service-rev\.default(?::\d{1,5})?$
      sourceLabels:
        mesh.cellery.io/cell: zero-cell
    - authority:
        regex: ^zero-cell--hello-service-rev\.default\.svc\.cluster\.local(?::\d{1,5})?$
      sourceLabels:
        mesh.cellery.io/cell: zero-cell
    route:
    - destination:
        host: zero-cell--hello-service-rev
